--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,14 +8,21 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#913535</color>
+    <color name="snow">#F9F4F5</color>
 
-<!--    <color name="app_background">#180A0A</color>
-    <color name="button_color">#8F5050</color>
-    <color name="item_background">#AD3E3E</color>
-    <color name="dialog_background">#453434</color>-->
-
+    <!--Dark blue theme-->
     <color name="app_background">#333333</color>
-    <color name="button_color">#EF0000 </color>
-    <color name="item_background">#AD3E3E</color>
-    <color name="dialog_background">#453434</color>
+    <color name="cardBackgroundColor">#00CCCCCC</color>
+    <color name="addButtonColor">#8B8B8B</color>
+    <!--Dark blue theme-->
+
+    <!--Dark theme-->
+    <color name="darkButtonColor">#6A6B83</color>
+    <color name="darkCardBackgroundColor">#151925</color>
+    <color name="darkButtonStartColor">#220070</color>
+    <color name="darkButtonCenterColor">#21035C</color>
+    <color name="darkButtonEndColor">#220070</color>
+
+    <color name="bottomNavigationBarColor">#1A1E2B</color>
+    <!--Dark theme-->
 </resources>
