--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:background="@drawable/button_color">
+                android:background="@drawable/dark_card_view_background">
 
                 <TextView
                     android:id="@+id/textViewLastTrainingPlanName"
@@ -121,7 +121,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginHorizontal="70dp"
         android:text="Return to workout"
-        android:textSize="23sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -133,7 +133,7 @@
         android:layout_height="70dp"
         android:layout_marginBottom="100dp"
         android:text="Start Workout"
-        android:textSize="23sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
