--- a/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
+++ b/app/src/main/res/layout/training_plans_recycler_view_item_layout.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:padding="5dp"
-            android:background="@drawable/button_color">
+            android:background="@drawable/dark_card_view_background">
 
             <CheckBox
                 android:id="@+id/checkBoxElement"
