--- a/app/src/main/res/layout/workout_history_recycler_view_item.xml
+++ b/app/src/main/res/layout/workout_history_recycler_view_item.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/button_color">
+            android:background="@drawable/dark_card_view_background">
 
             <TextView
                 android:id="@+id/textViewHistoryPlanName"
