user can swith between themes

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -45,11 +45,10 @@
         android:id="@+id/moreButtonEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="10dp"
         android:text="Edit"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:background="@drawable/dark_button_color"
         android:textColor="#D7D7D7"/>
 
@@ -57,10 +56,9 @@
         android:id="@+id/moreButtonDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="5dp"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:text="Delete"
         android:textColor="@color/red"
         android:background="@drawable/dark_button_color"/>
@@ -69,11 +67,10 @@
         android:id="@+id/moreButtonCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="15dp"
         android:text="Cancel"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:background="@drawable/dark_button_color"
         android:layout_marginBottom="15dp"
         android:textColor="#D7D7D7"/>
