--- a/app/src/main/res/drawable/dark_button_color.xml
+++ b/app/src/main/res/drawable/dark_button_color.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#00CCCCCC" /> <!-- Shadow color -->
-            <corners android:radius="10dp" /> <!-- Corner radius of button -->
+            <corners android:radius="15dp" /> <!-- Corner radius of button -->
         </shape>
     </item>
     <item>
@@ -15,7 +15,7 @@
                 android:angle="90"
                 android:centerX="0.01"
                 android:centerY="0.5" />
-            <corners android:radius="10dp" /> <!-- Corner radius of button -->
+            <corners android:radius="15dp" /> <!-- Corner radius of button -->
         </shape>
     </item>
     <!-- ... add more items if you want more layers to shadow for depth effect ... -->
@@ -25,17 +25,23 @@
         <shape android:shape="rectangle">
 <!--      fajne      android:startColor="#1B2135"
             android:centerColor="#191F32"
-            android:endColor="#1B2135"-->
+            android:endColor="#1B2135"
+
+                android:startColor="#4D3D80"
+                android:centerColor="#483681"
+                android:endColor="#4D3D80"
+            -->
             <gradient
-                android:startColor="#3E496B"
-                android:centerColor="#354168"
-                android:endColor="#3E496B"
-                android:angle="150"
-                android:centerX="0.5"
+                android:startColor="#1B2135"
+                android:centerColor="#191F32"
+                android:endColor="#1B2135"
+                android:angle="90"
+                android:centerX="0.2"
                 android:centerY="0.5" />
-            <corners
-                android:radius="10dp"/>
-            <corners android:radius="3dp" /> <!-- Corner radius of button -->
+            <corners android:radius="5dp" /> <!-- Corner radius of button -->
+            <stroke
+                android:width="2dp"
+                android:color="#3D3264"/>
         </shape>
     </item>
 </layer-list>
