--- a/app/src/main/res/layout/workout_expandable_layout.xml
+++ b/app/src/main/res/layout/workout_expandable_layout.xml
@@ -48,6 +48,12 @@
         android:textSize="18sp"
         android:text="@string/val"
         android:layout_marginEnd="10dp"/>
+
+    <CheckBox
+        android:id="@+id/checkBoxSetDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="25dp"/>
 </LinearLayout>
 
     <EditText
