--- a/app/src/main/res/layout/workout_expandable_title_layout.xml
+++ b/app/src/main/res/layout/workout_expandable_title_layout.xml
@@ -3,16 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/textViewExerciseName"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="@string/exercise"
         android:textSize="24sp"
+        android:layout_weight="1"
         android:layout_marginStart="35dp"
         android:textAlignment="viewStart"
         android:textStyle="bold"/>
+
+    <CheckBox
+        android:id="@+id/checkBoxExerciseDone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-3dp"
+        android:layout_marginEnd="20dp"
+        android:focusable="true"
+        android:clickable="true"/>
+
+</LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
