--- a/app/src/main/res/layout/workout_expandable_title_layout.xml
+++ b/app/src/main/res/layout/workout_expandable_title_layout.xml
@@ -24,8 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-3dp"
         android:layout_marginEnd="20dp"
-        android:focusable="true"
-        android:clickable="true"/>
+        android:clickable="false"/>
 
 </LinearLayout>
 
@@ -60,7 +59,7 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+     <!--   <LinearLayout
             style="@style/workout_linear_layout_title_item">
 
             <TextView
@@ -70,7 +69,7 @@
                 android:id="@+id/textViewRepsValue"
                 android:text="@string/val"
                 style="@style/workout_text_view_title_item"/>
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
             style="@style/workout_linear_layout_title_item">
