--- a/app/src/main/res/layout/workout_expandable_title_layout.xml
+++ b/app/src/main/res/layout/workout_expandable_title_layout.xml
@@ -24,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-3dp"
         android:layout_marginEnd="20dp"
-        android:clickable="false"/>
+        android:clickable="true"
+        android:focusable="true"/>
 
 </LinearLayout>
 
