--- a/app/src/main/res/layout/routine_expandable_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_layout.xml
@@ -127,12 +127,12 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textViewRpe"
+            android:id="@+id/textViewIntensity"
             style="@style/routine_text_view_item"
             android:text="@string/rpe" />
 
         <EditText
-            android:id="@+id/editTextRpe"
+            android:id="@+id/editTextIntensity"
             style="@style/routine_edit_text_item"
             android:hint="@string/enter_rpe" />
 
