--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -21,6 +21,14 @@
         app:entries="@array/units_entries"
         app:entryValues="@array/units_values"/>
 
+    <ListPreference
+        app:key="intensityIndex"
+        app:title="Intensity index"
+        app:defaultValue="RPE"
+        app:useSimpleSummaryProvider="true"
+        android:entries="@array/intensity_entries"
+        android:entryValues="@array/intensity_values"/>
+
 <PreferenceCategory app:title="Feedback" app:icon="@drawable/baseline_feedback_24">
 
     <Preference
