--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/moreLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/dark_bottom_dialog_sheet_background">
+    android:layout_height="match_parent">
 
     <ImageView
         android:layout_width="60dp"
@@ -49,7 +49,7 @@
         android:layout_marginTop="10dp"
         android:text="Edit"
         android:textSize="18sp"
-        android:background="@drawable/dark_button_color"
+
         android:textColor="#D7D7D7"/>
 
     <Button
@@ -61,7 +61,7 @@
         android:textSize="18sp"
         android:text="Delete"
         android:textColor="@color/red"
-        android:background="@drawable/dark_button_color"/>
+        />
 
     <Button
         android:id="@+id/moreButtonCancel"
@@ -71,7 +71,7 @@
         android:layout_marginTop="15dp"
         android:text="Cancel"
         android:textSize="18sp"
-        android:background="@drawable/dark_button_color"
-        android:layout_marginBottom="15dp"
-        android:textColor="#D7D7D7"/>
+
+        android:layout_marginBottom="50dp"
+        android:textColor="#D7D7D7" />
 </LinearLayout>
