--- a/app/src/main/res/layout/workout_history_recycler_view_item.xml
+++ b/app/src/main/res/layout/workout_history_recycler_view_item.xml
@@ -15,8 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/dark_card_view_background">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textViewHistoryPlanName"
