--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,14 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/buttonHome"
-        android:title="Workout"
-        android:icon="@drawable/home_icon_png"/>
+        android:id="@+id/buttonCharts"
+        android:title="Stats"
+        android:icon="@drawable/baseline_bar_chart_24"/>
 
     <item
         android:id="@+id/buttonTrainingPlans"
         android:title="Plans"
         android:icon="@drawable/plans_icon_png"/>
+
+
+    <item
+        android:id="@+id/buttonHome"
+        android:title="Workout"
+        android:icon="@drawable/home_icon_png"/>
 
     <item
         android:id="@+id/buttonTrainingHistory"
