--- a/app/src/main/res/layout/fragment_charts.xml
+++ b/app/src/main/res/layout/fragment_charts.xml
@@ -9,12 +9,16 @@
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/composeView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </androidx.compose.ui.platform.ComposeView>
 
     <AutoCompleteTextView
         android:id="@+id/exerciseSelect"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="20dp"
         android:hint="Select exercise"
@@ -25,37 +29,46 @@
         android:background="@drawable/select_background"/>
 
 
+    <Button
+        android:id="@+id/buttonLast15Workouts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last 15 workouts"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/hGuideline"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonLast5Workouts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="25dp"
+        android:text="Last 5 workouts"
+        app:layout_constraintBottom_toTopOf="@+id/hGuideline"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/hGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
+
     <com.patrykandpatrick.vico.views.chart.CartesianChartView
         android:id="@+id/chartViewLoad"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="132dp"
         app:chartHorizontalScrollingEnabled="true"
         app:layers="line"
-        app:layout_constraintBottom_toTopOf="@+id/chartViewReps"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/hGuideline"
         app:showBottomAxis="true"
-        app:showStartAxis="true"
-        app:showEndAxis="true"/>
+        app:showEndAxis="true"
+        app:showStartAxis="true" />
 
-    <com.patrykandpatrick.vico.views.chart.CartesianChartView
-        android:id="@+id/chartViewReps"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="120dp"
-        app:chartHorizontalScrollingEnabled="true"
-        app:layers="line"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:showBottomAxis="true"
-        app:showStartAxis="true"
-        app:showEndAxis="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
